[gd_scene load_steps=4 format=2]

[ext_resource path="res://Metronome.gd" type="Script" id=1]
[ext_resource path="res://HIGHCLICK.wav" type="AudioStream" id=2]
[ext_resource path="res://LOWCLICK.wav" type="AudioStream" id=3]

[node name="Metronome" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
time_signature_top = 3
time_signature_botton = 4
bpm = 100.0

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.6
one_shot = false
autostart = false

[node name="HighClick" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="LowClick" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="StopButton" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 84.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "[ ]"
flat = false
align = 1

[node name="StartButton" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 1.0
margin_right = 194.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "| >"
flat = false
align = 1

[node name="Display" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 225.0
margin_top = 19.0
margin_right = 265.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]


